# ImgConv

./: CMakeLists.txt  README.md  dockerfile
include/: bmp_image.h  color_map.h  gif_image.h  ico_image.h  image.h  jpeg_image.h  png_image.h  ppm_image.h  svg_image.h  tiff_image.h
lib/: png_image.cpp
src/: bmp_image.cpp  gif_image.cpp  ico_image.cpp  image.cpp  jpeg_image.cpp  main.cpp  png_image.cpp  ppm_image.cpp  svg_image.cpp  tiff_image.cpp
